# containers

./: .gitattributes  .gitignore  .gitlab-ci-local-env  .gitlab-ci-local-variables.yml  .gitlab-ci.yml  .pre-commit-config.yaml  AGENTS.md  CMakeLists.txt  README.md  build-base.sh  build-eic.sh  containers.yaml  deploy.py  detectors.yaml  download_dev.sh  eic-spack.hcl  eic-spack.sh  eicspack.sh  install.sh  install_dev.sh  key4hep-spack.hcl  key4hep-spack.sh  mirrors.yaml.in  spack-packages.sh  spack.hcl  spack.sh  spack.yaml
.ci/: check_image_size  cvmfs_catalog_analysis  resolve_git_ref
.github/: copilot-instructions.md
.github/workflows/: build-push.yml  cleanup-buildcache.yml  docs.yml  macos-ci.yml  mirror.yaml  pr-backport.yml
.gitlabci/: build.sh
cmake/: options.cmake
containers/: CMakeLists.txt  variables.hcl
containers/builder/: '  Dockerfile  Makefile  config.env  eic_builder.def  spack.yaml  update_buildcache.sh
containers/cuda/: Dockerfile
containers/debian/: Dockerfile  README.md  base.Dockerfile  base.hcl  bashrc  stable.Dockerfile
containers/dind/: Dockerfile
containers/docker/: Dockerfile  Makefile  config.env  version.sh
containers/eic/: Dockerfile  Dockerfile.spack-cache-cleanup  README.md  eic-env.sh  eic-info  eic-mcp  eic-news
containers/eic/copilot/: mcp-config.instructions.md  mcp-config.json
containers/eic/profile.d/: a00_cleanup.sh  z12_root_exe.sh  z13_eic_news.sh  z14_singularity_libs.sh  z15_singularity_update.sh  z21_epic_main.sh  z22_just.sh  z23_copilot_mcp.sh  z99_spack_lazy_load  z99_spack_lazy_load.sh
containers/jug/: Dockerfile.dev  Dockerfile.xl  aws_config  boto3_config  dev.Dockerfile  dev.hcl  eic-env.sh  eic-shell  entrypoint.sh  feature.Dockerfile  ld.so.preload  requirements.txt  setup_detectors.py  spack.Dockerfile  xl.Dockerfile
containers/jug/profile.d/: a00_cleanup.sh  z11_jug_env.sh
containers/jug/singularity.d/env/: 99-zz_jug_env.sh
containers/oneapi/: base.Dockerfile  onedev.Dockerfile  onexl.Dockerfile
containers/release/: Dockerfile  Dockerfile.in  Makefile  bashrc  config.env  config_release.sh  configure_release.sh  eic-latest.def  eic-shell  eic-unstable.def  eic.def  eic.def.in  version.sh
containers/singularity/: eic.def
containers2/: spack.yaml
docs/: .nojekyll  BUILDCACHE_SIGNING.md  README.md  _sidebar.md  architecture.md  build-pipeline.md  building-locally.md  index.html  spack-environment.md
gitlab-ci/: build_and_deploy.yml.in  cleanup_registry.sh  configure.sh  configure_pipeline.sh  docker_login.sh  docker_push.sh
gitlab-ci/docker/: Makefile  version-stable.sh  version.sh
install/: __init__.py  launcher.py  modulefile.py  util.py
modulefiles/: CMakeLists.txt  modulefile.in
scripts/: CMakeLists.txt  build-base.sh  build-eic.sh  check_image_size  container_dev.in  container_shell_wrap.in  cvmfs_catalog_analysis  launcher.in  wrapper.in
spack/: README.md  concretizer.yaml  packages.yaml  spack.yaml
spack-environment/: Makefile  concretizer.yaml  config.yaml  cuda_arch.yaml  env_vars.yaml  packages.yaml  packages_cvmfs_geant4data.yaml  packages_root_with_opengl.yaml  packages_root_without_opengl.yaml  view.yaml
spack-environment/ci/: spack.yaml
spack-environment/ci/epic/: spack.yaml
spack-environment/ci_clang/: spack.yaml
spack-environment/ci_clang/epic/: spack.yaml
spack-environment/ci_without_acts/: spack.yaml
spack-environment/ci_without_acts/epic/: spack.yaml
spack-environment/compilers/: spack.yaml
spack-environment/cuda/: spack.yaml
spack-environment/cuda/epic/: spack.yaml
spack-environment/cvmfs/: spack.yaml
spack-environment/cvmfs/epic/: spack.yaml
spack-environment/dbg/: spack.yaml
spack-environment/dbg/epic/: spack.yaml
spack-environment/dev/: spack.yaml
spack-environment/epic/: spack.yaml
spack-environment/jl/: spack.yaml
spack-environment/jl/epic/: spack.yaml
spack-environment/prod/: spack.yaml
spack-environment/prod/epic/: spack.yaml
spack-environment/test/: spack.yaml
spack-environment/tf/: spack.yaml
spack-environment/tf/epic/: spack.yaml
spack-environment/xl/: spack.yaml
spack-environment/xl/epic/: spack.yaml
spack/dev/: spack.yaml
spack/prod/: spack.yaml
tests/tutorial/: config.yml  part1.sh  quick-start.sh
