## CMake project file for hallac_container

################################################################################
## PROJECT: hallac_container
################################################################################
cmake_minimum_required (VERSION 3.8)
project (eic_container VERSION 0.9.9)

################################################################################
## The name of our container
################################################################################
set(CONTAINER eic-${PROJECT_VERSION}.sif)

################################################################################
## CMAKE Settings 
################################################################################
include(cmake/options.cmake)

################################################################################
## Subdirectories
################################################################################

add_subdirectory(containers)
add_subdirectory(modulefiles)
add_subdirectory(scripts)
